Style page with SCSS

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,7 @@
 html
   head
     title Consort Tutorial
+    link(rel="stylesheet", href="/public/css/application.css")
     block scripts
   body
     block content
