Add a search form to the page

--- a/sass/application.scss
+++ b/sass/application.scss
@@ -1,5 +1,5 @@
 body {
-  //font-size: 150%;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 ul.results {
@@ -19,7 +19,7 @@ ul.results {
     margin: 0.5em;
     
     img {
-      margin-right: 0.5em;
+      margin: 0 0.5em 0.5em 0;
       width: 100%;
     }
     
