--- a/views/results.pug
+++ b/views/results.pug
@@ -1,12 +1,20 @@
 extends layout.pug
 
 block content
-  h1 Search Results
+  if query !== undefined
+    h1 Search Results for "#{query}"
+  else
+    h1 Search for something!
+  
+  form(action="/search", method="GET")
+    input(type='search', name="q", value=query)
+    button(type='submit') Search
+    
   ul.results
     each result, index in results
       li
         div
           img(src=result.artworkUrl100)
         div.info
-          p.collection=result.collectionName
           p.artist=result.artistName
+          p.collection=result.collectionName
